--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -18,6 +18,11 @@
 .title + .icon {
     margin-left: 8px;
 }
+.icon {
+    display: inline-block;
+    width: 24px;
+    text-align: center;
+}
 // Button
 .rounded {
     border-radius: 9999px;
