--- a/src/components/Popper/Menu/menu.module.scss
+++ b/src/components/Popper/Menu/menu.module.scss
@@ -1,6 +1,5 @@
 .menu-list {
     width: 224px;
-
     .menu-item {
         margin-left: 0px;
     }
@@ -9,12 +8,32 @@
     padding-bottom: 8px;
 }
 .menu-item {
+    font-weight: 500;
     width: 100%;
     justify-content: start;
     border-radius: 0;
-
+    line-height: 1.8rem;
     padding: 11px 16px;
     &:hover {
         background-color: rgba(22, 24, 35, 0.03);
     }
+}
+// Header
+.header {
+    margin-top: -8px;
+    position: relative;
+    height: 50px;
+}
+.back-btn {
+    width: 50px;
+    height: 100%;
+    background-color: transparent;
+    cursor: pointer;
+}
+.header-title {
+    font-weight: 500;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
