--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -34,6 +34,15 @@
         background-color: rgb(255, 255, 255);
     }
 }
+.upload {
+    border: 1px solid rgba(22, 24, 35, 0.12);
+    border-radius: 2px;
+    font-weight: 600;
+    margin-right: 16px;
+    &:hover {
+        background-color: rgba(22, 24, 35, 0.03);
+    }
+}
 .primary {
     border-color: rgb(254, 44, 85);
     background-color: rgb(254, 44, 85);
