--- a/src/components/Layout/Components/Header/Header.module.scss
+++ b/src/components/Layout/Components/Header/Header.module.scss
@@ -103,10 +103,30 @@
 .search:focus-within {
     border-color: rgba(22, 24, 35, 0.2); /* Viền thay đổi khi đang nhập */
 }
+// actions
+.actions {
+    display: flex;
+    align-items: center;
+}
+.actions-btn {
+    cursor: pointer;
+    color: #161823;
+    font-size: 2.1rem;
+    background-color: transparent;
+    padding: 4px 16px;
+}
 .more-btn {
     background-color: transparent;
     font-size: 1.5rem;
     margin-left: 16px;
     padding: 0px 15px;
     cursor: pointer;
+}
+//avatar
+.user-avatar {
+    width: 32px;
+    height: 32px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-left: 12px;
 }
