--- a/src/components/Icons/Icons.module.scss
+++ b/src/components/Icons/Icons.module.scss
@@ -1,1 +1,17 @@
-
+.number-icon {
+    color: rgb(255, 255, 255);
+    font-family: TikTokFont, Arial, Tahoma, PingFangSC, sans-serif;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 18px;
+    left: 16px;
+    background: rgb(254, 44, 85);
+    min-width: 20px;
+    height: 20px;
+    display: flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+    border-radius: 10px;
+    position: absolute;
+    top: -5%;
+}
